# local-first-mcp

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/local_first_mcp/: __init__.py  server.py
src/local_first_mcp/tools/: __init__.py  promo.py  search.py  summarize.py
tests/: test_promo.py  test_search.py  test_summarize.py
