[project]
name = "local-first-mcp"
version = "0.1.0"
description = "MCP server exposing local-first AI tools to Claude"
authors = [
    { name = "Jamal Hansen", email = "jamal.hansen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "resource-summarizer",
    "promo-generator",
    "vault-semantic-search",
]

[project.scripts]
local-first-mcp = "local_first_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_first_mcp"]

[tool.uv.sources]
resource-summarizer = { path = "../resource-summarizer", editable = true }
promo-generator = { path = "../promo-generator", editable = true }
vault-semantic-search = { path = "../vault-semantic-search", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
